--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
+    <script type="text/javascript " src="tasks/arguments/MiguelVeronica.js" ></script>
 </head>
 <body>
 
