Adding new methods, savePlayers, turnsLeft and gameStatus.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
-	<script src="tests/Person.js" type="application/javascript"></script>
+	<script src="tasks/memory-game/memoryGame.js" type="application/javascript"></script>
 </head>
 <body>
 
