Adding html view and updating the methods to handle mouse events

--- a/tasks/memory-game/group-Row1/index.html
+++ b/tasks/memory-game/group-Row1/index.html
@@ -6,6 +6,8 @@
     <script src="src/MemoryGame.js" type="application/javascript"></script>
 </head>
 <body>
-
+	<input id="size" type="text" value="4"> 
+	<button type="button" onClick="Game()">Click me to start!</button>
+	<div id='inner'></div>
 </body>
 </html>
