--- a/tasks/memory-game/group-Row1/index.html
+++ b/tasks/memory-game/group-Row1/index.html
@@ -3,7 +3,11 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
-    <script src="src/MemoryGame.js" type="application/javascript"></script>
+	<script src="src/MemoryGame.js" type="application/javascript"></script>
+    <script src="src/main.js" type="application/javascript"></script>
+	<input id="size" type="text" value="4"> 
+	<button type="button" onClick="game()">Click me to start!</button>
+	<div id='inner'></div>
 </head>
 <body>
 
