Resending HTML improvements and updating the methods to handle mouse events in the array
Implemented a field and button to set the array size, added basic CSS styles, build an HTML table with identifiers to interact when the user clicks on it then the Hit event will evaluate and update the table dynamically

--- a/tasks/memory-game/group-Row1/index.html
+++ b/tasks/memory-game/group-Row1/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head lang="en">
+	<link rel="stylesheet" type="text/css" href="src/css/site.css">
     <meta charset="UTF-8">
-    <title></title>
-    <script src="src/MemoryGame.js" type="application/javascript"></script>
+    <title>MEMORY GAME - Puzzle Game</title>
+	<script src="src/MemoryGame.js" type="application/javascript"></script>
+    <script src="src/main.js" type="application/javascript"></script>
 </head>
 <body>
+	Set size: 
 	<input id="size" type="text" value="4"> 
-	<button type="button" onClick="Game()">Click me to start!</button>
-	<div id='inner'></div>
+	<button type="button" onClick="game()">Click me to start!</button>
+	<br>
+	<br>
+	<div id='inner' alignment="center"></div>
 </body>
 </html>
