Resending HTML improvements and updating the methods to handle events
Implemented a field and button to set the array size, added basic CSS styles, build an HTML table with identifiers to interact when the user clicks on it then the Hit event will evaluate and update the table dynamically

--- a/tasks/memory-game/group-Row1/index.html
+++ b/tasks/memory-game/group-Row1/index.html
@@ -13,6 +13,6 @@
 	<button type="button" onClick="game()">Click me to start!</button>
 	<br>
 	<br>
-	<div id='inner' alignment="center"></div>
+	<div id='inner'></div>
 </body>
 </html>
