Completing game code (functional)

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title></title>
 	<script src="tasks/memory-game/memoryGame.js" type="application/javascript"></script>
+	<script src="tasks/memory-game/board.js" type="application/javascript"></script>
+	<script src="tasks/memory-game/play.js" type="application/javascript"></script>
+	<script src="tasks/memory-game/main.js" type="application/javascript"></script>
 </head>
 <body>
 
