Refactored hitCell methods and others, added styles to css and changed UI look and feel

--- a/tasks/memory-game/group-Row1/index.html
+++ b/tasks/memory-game/group-Row1/index.html
@@ -8,11 +8,15 @@
     <script src="src/main.js" type="application/javascript"></script>
 </head>
 <body>
-	Set size: 
+	<div class="textCommon">Set size: 
 	<input id="size" type="text" value="4"> 
-	<button type="button" onClick="game()">Click me to start!</button>
+	<button type="button" onClick="game()" class="button">Click me to start!</button>
+	</div>
 	<br>
 	<br>
 	<div id='inner'></div>
+	<br>
+	<br>
+	<div id='msg' class="box"></div>
 </body>
 </html>
