Add the capacity to create the matrix based on two values
Added a new input field to create the matrix based on two values: width and heigth, also changed their configuration to work as dropdowns to avoid wrong data submition.  Added a clean command in the submit button to clear the win-message to reset the table

--- a/tasks/memory-game/group-Row1/index.html
+++ b/tasks/memory-game/group-Row1/index.html
@@ -7,9 +7,17 @@
 	<script src="src/MemoryGame.js" type="application/javascript"></script>
     <script src="src/main.js" type="application/javascript"></script>
 </head>
-<body>
-	<div class="textCommon">Set size: 
-	<input id="size" type="text" value="4"> 
+<body onload="loadDropdown()">
+	<div class="textCommon">Set width: 
+	  <select id="width" class="dropbtn">
+	  </select>
+	<br>
+	<br>
+	<div class="textCommon">Set height: 	
+	  <select id="height" class="dropbtn">
+	  </select>
+	<br>
+	<br>
 	<button type="button" onClick="game()" class="button">Click me to start!</button>
 	</div>
 	<br>
