--- a/tasks/memory-game/group-Row1/index.html
+++ b/tasks/memory-game/group-Row1/index.html
@@ -8,19 +8,15 @@
     <script src="src/main.js" type="application/javascript"></script>
 </head>
 <body onload="loadDropdown()">
-	<div class="textCommon">Set width: 
-	  <select id="width" class="dropbtn">
-	  </select>
+	
+	<div class="textCommon">Set width: <select id="width" class="dropbtn"> </select> Set height: <select id="height" class="dropbtn"></select>
+	</div>
 	<br>
-	<br>
-	<div class="textCommon">Set height: 	
-	  <select id="height" class="dropbtn">
-	  </select>
-	<br>
-	<br>
+	<div class="textCommon">Player 1: <input id="player1" type="text" value="Maria">   Player 2: <input id="player2" type="text" value="Marcelo">
 	<button type="button" onClick="game()" class="button">Click me to start!</button>
 	</div>
 	<br>
+	<div id='playerName' class="player"></div>
 	<br>
 	<div id='inner'></div>
 	<br>
