Add JSDocs and add title and developed by in the ui

--- a/tasks/memory-game/group-Row1/index.html
+++ b/tasks/memory-game/group-Row1/index.html
@@ -8,7 +8,10 @@
     <script src="src/main.js" type="application/javascript"></script>
 </head>
 <body onload="loadDropdown()">
-	
+	<div class="title">Memory Game</div>
+	<div>Developed by Maria Ledezma & Marcelo Vargas</div>
+	<br>
+	<br>
 	<div class="textCommon">Set width: <select id="width" class="dropbtn"> </select> Set height: <select id="height" class="dropbtn"></select>
 	</div>
 	<br>
