--- a/tests/js-basics/Amilcar/index.html
+++ b/tests/js-basics/Amilcar/index.html
@@ -2,9 +2,20 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
+    <<<<<<< Updated upstream
     <title></title>
+    <script src="sessions/person.js" type="application/javascript"></script>
+    =======
+    <title>Hangman Game</title>
+    <script type="application/javascript">
+
+        console.log("Welcome to the hangman game")
+
+    </script>
+    <script src="hangman.js"></script>
+    >>>>>>> Stashed changes
 </head>
 <body>
-
+Hangman Game version 1.1
 </body>
 </html>
