5th push - minor changes

--- a/tests/js-basics/marcelovargas/index.html
+++ b/tests/js-basics/marcelovargas/index.html
@@ -4,8 +4,8 @@
     <link rel="stylesheet" type="text/css" href="src/css/site.css">
     <meta charset="UTF-8">
     <title>HANGMAN GAME - Puzzle Game</title>
-	<script src="src/Hangman.js" type="application/javascript"></script>
-    <script src="src/main.js" type="application/javascript"></script>
+	<script src="src/Hangman.js" async type="application/javascript"></script>
+    <script src="src/main.js" async type="application/javascript"></script>
 </head>
 <body onload="loadGame()">
 	<div class="title">Hangman Game</div>
@@ -15,5 +15,10 @@
 	<br>
 	<br>
 	<div id='demo' class="box"></div>
+	<br>
+	<br>
+	<button type="button" onClick="loadMenu()" class="button">Click me show menu!</button>
+	<br>
+	<br>
 </body>
 </html>
