Adding a keyboard to hit the chars
Removed the alerts to get the char  and replaced by a built keyboard, this helped to view the updated word in the HTML view, added the numbers of tries in the view. You can still view the selected random word from the console.

--- a/tests/js-basics/marcelovargas/index.html
+++ b/tests/js-basics/marcelovargas/index.html
@@ -14,11 +14,15 @@
 	<div id='inner'></div>
 	<br>
 	<br>
-	<div id='demo' class="box"></div>
+	<div id='keyboard'></div>
 	<br>
 	<br>
-	<button type="button" onClick="loadMenu()" class="button">Click me show menu!</button>
+	<div id='turn'></div>
 	<br>
 	<br>
+	<button type="button" onClick="loadGame()" class="button">Restart</button>
+	<br>
+	<br>
+	<div id='status' class="textCommon"></div>
 </body>
 </html>
